scrollbar issue

--- a/css/style.css
+++ b/css/style.css
@@ -292,9 +292,6 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; }
-  @media only screen and (max-width: 1700px) {
-    html {
-      overflow: auto; } }
   @media only screen and (max-width: 900px) {
     html {
       font-size: 55%; } }
@@ -302,7 +299,8 @@ html {
 body {
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 500;
-  line-height: 1.4; }
+  line-height: 1.4;
+  overflow-y: scroll; }
 
 ::-webkit-scrollbar {
   width: 10px;
